--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -17,6 +17,15 @@
     ]
   },
   "csstree/validator": true,
-  "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"]
-}
+  "ignoreFiles": ["build/**", "dist/**", "**/reset*.css", "**/bootstrap*.css"],
 
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false,
+  "stylelint.snippet": ["css", "scss", "less", "postcss", "javascript"],
+  "stylelint.validate": ["css", "scss", "less", "postcss", "javascript"],
+  "editor.codeActionsOnSave": {
+    "source.fixAll.eslint": true,
+    "source.fixAll.stylelint": true
+  }
+}
